style: run prettier
Command: contrib/create-style-commit

--- a/xpra/eaas-xpra.css
+++ b/xpra/eaas-xpra.css
@@ -1,12 +1,13 @@
 #emulator-container {
-  position: relative;
-  min-width: 800px;
-  min-height: 600px;
+    position: relative;
+    min-width: 800px;
+    min-height: 600px;
 }
 
-.window, .undecorated {
-  position: absolute;
-  overflow: hidden;
-  border: 0;
-  padding: 0;
+.window,
+.undecorated {
+    position: absolute;
+    overflow: hidden;
+    border: 0;
+    padding: 0;
 }
